traefik.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik
  namespace: kube-public
  labels:
    app: traefik
spec:
  replicas: 2
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      name: traefik
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-sa
      containers:
        - name: traefik
          image: traefik:2.7
          args:
            - "--api.insecure=true"
            - "--providers.kubernetescrd"
            - "--entrypoints.web.address=:80"
            - "--entrypoints.websecure.address=:443"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
            - containerPort: 8080
            - containerPort: 443
      restartPolicy: Always
