traefik.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: kube-public
  labels:
    app: traefik
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 80
      targetPort: 80
      nodePort: 30021
    - name: dashboard
      port: 8080
      targetPort: 8080
      nodePort: 30042
  selector:
    app: traefik
