result.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: result
  labels:
    name: result
spec:
  rules:
  - host: result.ingress.k8s
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: result
            port:
              number: 80
